Cleanup tests and note on why junit4 exits
with exclusion to turn it off to verify only the one class is using it.